# OpenCoarrays

./: .VERSION  .clang-format  .gitattributes  .gitignore  .gitmodules  .pullapprove.yml  .travis.yml  AUTHORS  AUTHORS.md  AddCompileTimeTest.cmake  AddInstallationScriptTest.cmake  Brewfile  CAF_ABI.md  CAF_API.txt  CMakeLists.txt  CONTRIBUTING  CONTRIBUTING.md  COPYRIGHT-BSD3  CheckFortranSourceCompiles.cmake  FAQ.md  GETTING_STARTED.md  INSTALL  INSTALL.md  LICENSE  Makefile  Makefile.am  Makefile.in  OpenCoarrays-prj.md  README.md  STATUS  STATUS.md  aclocal.m4  caf_auxiliary.c  co_collectives.f90  codecov.yml  config.h.in  config.h.in~  configure  configure.ac  depcomp  (+17 more)
.github/: FUNDING.yml  (+4 more)
3rd-party-tools/open-fortran-parser-sdf/trans/: CMakeLists.txt  Makefile  README.md  caf-lower.str  caf_get.f90  fast-to-ocaf.str  testfile.f90  tests
install_prerequisites/: CMakeLists.txt  acceptable_compiler.f90  build  build-ofp.sh  build-tau.sh  build.sh  build.sh-usage  buildcmake  buildflex  buildgcc  buildmpich  buildpkg-config  buildwget  install-ofp.sh  installStrategoXT.sh  set_SUDO.sh  set_or_list_versions.sh  set_or_list_versions.sh-usage  stack.sh
install_prerequisites/build-functions/: download_if_necessary.sh  set_SUDO_if_needed_to_create.sh  set_or_list_versions.sh
install_prerequisites/use-case/: define_functions.sh  set_magic_variables.sh
src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README.md  coarray-shear_coll.F90  foo_m.f90  get_array_test.f90  get_with_offset_1d.f90  initialize_mpi.f90  libcaf-gfortran-descriptor.h  libcaf.h  main.f90  make.inc  make.inc.Cray-XE  mpi_caf.c  mpi_distributed_transpose.F90  mpi_swin_keys.h  mpiwrappers.h  run.sh  strided_get.f90  test1Caf.f90  testAtomics.f90  whole_get_array.f90
src/application-binary-interface/: CMakeLists.txt  libcaf-gfortran-descriptor.h  libcaf.h
src/armci/: Makefile  armci.c
src/cafe/: caf-foot  caf-head  caf2ocaf-head.sh  cafrun-foot  cafrun-head  opencoarrays.F90
src/cli/: caf.in
src/common/: Makefile  caf_auxiliary.c
src/cuda_mpi/: .mpi_caf.c.swp  Makefile  mpi_caf.c
src/extensions/: Makefile  caf  caf-compiler.sh  caf-foot  caf-head  caf.in  caf2ocaf-foot.sh  cafrun-foot  cafrun-head  cafrun.in  co_sum-transformed.F90  hello-world-transformed.F90  non-caf-compiler.sh  opencoarrays.F90  opencoarrays.f90  opencoarrays_API.F90
src/gasnet/: gasnet.c
src/iso-fortran-binding/: CMakeLists.txt  ISO_Fortran_binding.c  ISO_Fortran_binding.h
src/iso-fortran-binding/descriptor_translation/src/: descriptor_translation.c  descriptor_translation.h
src/iso_fortran_binding/: CMakeLists.txt  ISO_Fortran_binding.c  ISO_Fortran_binding.h
src/mpi/: AITuning_OpenCoarrays.cpp  CMakeLists.txt  Makefile  helper.c  mpi_caf.c
src/mpi-runtime/: mpi_caf.c
src/openshmem/: Makefile  openshmem_caf.c
src/power/: Makefile  caf_init_finalize.cpp  caf_init_finalize_test.cpp  libcaf.h  mpi_caf.c  mpi_caf_collectives.cpp  mpi_caf_core.cpp  num_images.cpp  test_co_broadcast.cpp  test_co_max.cpp  test_co_min.cpp  test_co_sum.cpp  test_error_stop.cpp  test_num_images.cpp  test_sync_all.cpp  test_this_image.cpp
src/runtime-libraries/: CMakeLists.txt
src/runtime-libraries/common/: caf_auxiliary.c
src/runtime-libraries/gasnet/: CMakeLists.txt  Makefile  gasnet.c
src/runtime-libraries/mpi/: CMakeLists.txt  mpi_caf.c  opencoarrays.F90
src/runtime-libraries/openshmem/: openshmem_caf.c
src/script-templates/: caf.bat.in  caf.in  cafrun.bat.in  cafrun.in  fpm.toml-template  install.rsp-template  test.rsp-template
src/single/: CMakeLists.txt  single.c
src/standard/: cfi-descriptor.h  libcaf_min.h  libcaf_standard.h  standard_caf.c  standard_caf.cpp
src/swig-modules/: libcaf-gfortran-descriptor_wrap.c  libcaf-version-def_wrap.c  libcaf_gfortran_desc_m.f90  libcaf_m.f90  libcaf_version_m.f90  libcaf_wrap.c
src/tests/: CMakeLists.txt  Makefile.am  Makefile.in
src/tests/buildScripts/: gnu-compilers-cmake.sh  ibm-compilers-cmake.sh  intel-compilers-cmake.sh  nag-compilers-cmake.sh  pgi-compilers-cmake.sh
src/tests/installation/: installation-scripts.sh  test-stack.sh
src/tests/integration/: CMakeLists.txt  Makefile.am  Makefile.in
src/tests/integration/coarrayHelloWorld/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  hello_multiverse.F90
src/tests/integration/dist_transpose/: CMakeLists.txt  Makefile.am  Makefile.in  coarray_distributed_transpose.F90
src/tests/integration/events/: CMakeLists.txt  Makefile.am  Makefile.in  async-hello.F90
src/tests/integration/extensions/: CMakeLists.txt  tally_image_numbers.f90
src/tests/integration/gpu/: Makefile  accelerated_co_dot.f90  co_dot.f90  kernelCaller.cu
src/tests/integration/pde_solvers/: CMakeLists.txt  Makefile.am  Makefile.in  README.md  README.txt
src/tests/performance/BurgersMPI/: CMakeLists.txt  Makefile  input_file.F90  kind_parameters.F90  shared.F90
src/tests/performance/mpi_dist_transpose/: CMakeLists.txt  mpi_distributed_transpose.F90
src/tests/source-transformation/: co_sum.f90  derivative.f90  transformed-co_sum.f90  transformed-derivative.f90
src/tests/unit/: CMakeLists.txt  Makefile.am  Makefile.in  host-associated-alloc-comp.f90
src/tests/utilities/: CMakeLists.txt  assertions_implementation.F90  assertions_interface.F90  object_interface.f90  opencoarrays_assertions_implementation.F90  opencoarrays_assertions_interface.F90  opencoarrays_object_interface.f90
src/wrappers/: caf.in
tests/pde_solvers/coarrayBurgersStaticTau/: CMakeLists.txt  Makefile  main.F90  math_constants.F90  periodic_2nd_order.F90
tests/src/: CMakeLists.txt
tests/src/coarrayHelloWorld/: Makefile  burgers_static_caf  hello_multiverse.F90
tests/src/dist_transpose/: coarray_distributed_transpose.f90  mpi_distributed_transpose.f90  yyy.F90  zzz.F90
tests/src/pde_solvers/: CMakeLists.txt  README.txt
tests/src/performance/: cafpsnap.f90  timemeasure.c
tests/src/send-get/: sameloc.f90
tests/src/simple/: CMakeLists.txt  Makefile  get_array_test.f90  recv_array_test.f90  syncimages.f90  syncimages2.f90  test1Caf.f90
(+789 files in other folders)
